update node configs to include role as machine environment variable, expand cli to apply node configs and open privileged debug shells, remove commented out code from cilium

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "tempy": "^3.1.0",
     "tsx": "^4.7.2",
     "typescript": "^5.4.4",
+    "yaml": "^2.6.0",
     "zod": "^3.23.8"
   },
   "bin": {
