--- a/.template.env
+++ b/.template.env
@@ -1,11 +1,13 @@
-ACCESS_OPERATOR_CLOUDFLARE_API_TOKEN=
-ACCESS_OPERATOR_CLOUDFLARE_TUNNEL_TOKEN=
-ACCESS_OPERATOR_ROUTEROS_PASSWORD=
-ALERTMANAGER_GMAIL_PASSWORD=
-ARGOCD_PASSWORD=
-ARGOCD_GITHUB_TOKEN=
-EXTERNAL_DNS_ROUTEROS_PASSWORD=
-GRAFANA_PASSWORD=
-MINECRAFT_ACCESS_PASSWORD=
-MINIO_TENANT_PASSWORD=
-VELERO_MINIO_SECRET_KEY=
+ACCESS_OPERATOR_CLOUDFLARE_API_TOKEN=""
+ACCESS_OPERATOR_CLOUDFLARE_TUNNEL_TOKEN=""
+ACCESS_OPERATOR_ROUTEROS_PASSWORD=""
+ALERTMANAGER_GMAIL_PASSWORD=""
+ARGOCD_PASSWORD=""
+ARGOCD_GITHUB_TOKEN=""
+EXTERNAL_DNS_ROUTEROS_PASSWORD=""
+FACTORIO_ACCESS_PASSWORD=""
+GRAFANA_PASSWORD=""
+MINECRAFT_ACCESS_PASSWORD=""
+MINIO_TENANT_PASSWORD=""
+VOLSYNC_ENCRYPTION_KEY=""
+VOLSYNC_MINIO_SECRET_KEY=""
