use gcs for volume backups, not local minio

--- a/.template.env
+++ b/.template.env
@@ -10,4 +10,4 @@ GRAFANA_PASSWORD=""
 MINECRAFT_ACCESS_PASSWORD=""
 MINIO_TENANT_PASSWORD=""
 VOLSYNC_ENCRYPTION_KEY=""
-VOLSYNC_MINIO_SECRET_KEY=""
+VOLSYNC_GCS_KEY_JSON=''
