attempt to debug sesion

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -53,9 +53,11 @@ jobs:
           rm -rf manifests/*
           echo '${{secrets.ENV_FILE}}' > .env
           echo "${{secrets.SEALED_SECRETS_CERT}}" > "${SEALED_SECRETS_CERT_PATH}"
-          homelab manifests all generate
+          # homelab manifests all generate
         env:
           SEALED_SECRETS_CERT_PATH: /tmp/sealed-secrets.crt
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
       - name: commit manifests
         run: |
           cd manifests
