add seven days to die, update template.env

--- a/.template.env
+++ b/.template.env
@@ -6,8 +6,10 @@ ARGOCD_PASSWORD=""
 ARGOCD_GITHUB_TOKEN=""
 EXTERNAL_DNS_ROUTEROS_PASSWORD=""
 FACTORIO_ACCESS_PASSWORD=""
+FACTORIO_TOKEN=""
 GRAFANA_PASSWORD=""
 MINECRAFT_ACCESS_PASSWORD=""
 MINIO_TENANT_PASSWORD=""
+SEVEN_DAYS_TO_DIE_ACCESS_PASSWORD=""
 VOLSYNC_ENCRYPTION_KEY=""
-VOLSYNC_GCS_KEY_JSON=''
+VOLSYNC_GCS_KEY_JSON_BASE64=""
