create minecraft + seven-days-to-die minio buckets for hosting mods

--- a/.template.env
+++ b/.template.env
@@ -9,7 +9,9 @@ FACTORIO_ACCESS_PASSWORD=""
 FACTORIO_TOKEN=""
 GRAFANA_PASSWORD=""
 MINECRAFT_ACCESS_PASSWORD=""
+MINECRAFT_MINIO_SECRET_KEY=""
 MINIO_TENANT_PASSWORD=""
 SEVEN_DAYS_TO_DIE_ACCESS_PASSWORD=""
+SEVEN_DAYS_TO_DIE_MINIO_SECRET_KEY=""
 VOLSYNC_ENCRYPTION_KEY=""
 VOLSYNC_GCS_KEY_JSON_BASE64=""
