add loki, streamline minio bucket creation

--- a/.template.env
+++ b/.template.env
@@ -8,6 +8,7 @@ EXTERNAL_DNS_ROUTEROS_PASSWORD=""
 FACTORIO_ACCESS_PASSWORD=""
 FACTORIO_TOKEN=""
 GRAFANA_PASSWORD=""
+LOKI_MINIO_SECRET_KEY=""
 MINECRAFT_ACCESS_PASSWORD=""
 MINECRAFT_MINIO_SECRET_KEY=""
 MINIO_TENANT_PASSWORD=""
