--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "cdk8s-cli": "^2.198.119",
     "commander": "^12.0.0",
     "constructs": "^10.3.0",
+    "deepmerge-ts": "^7.1.5",
     "dotenv": "^16.4.5",
     "glob": "^10.4.1",
     "js-yaml": "^4.1.0",
