--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -24,7 +24,7 @@
     "ghcr.io/devcontainers/features/node:1": {
       "version": "20.12.1"
     },
-    "ghcr.io/devcontainers-contrib/features/apt-packages": {
+    "ghcr.io/devcontainers-extra/features/apt-packages:1": {
       "packages": ["curl", "git", "vim"]
     }
   },
