Enable GPU workloads
- Image nodes with talos image containing i915 extension
- Add intel gpu node label to appropriate nodes
- Clean up chart declarations
- Modify talos CLI to more cleanly obtain full machine configuration, global patches or node patches

--- a/talos/node-g.cluster.bulia.dev.yaml
+++ b/talos/node-g.cluster.bulia.dev.yaml
@@ -5,3 +5,5 @@ machine:
     disk: /dev/nvme0n1
   network:
     hostname: node-g.cluster.bulia.dev
+  nodeLabels:
+    "intel.feature.node.kubernetes.io/gpu": "true"
