--- a/talos/node-e.cluster.bulia.dev.yaml
+++ b/talos/node-e.cluster.bulia.dev.yaml
@@ -5,3 +5,5 @@ machine:
     disk: /dev/nvme0n1
   network:
     hostname: node-e.cluster.bulia.dev
+  nodeLabels:
+    "intel.feature.node.kubernetes.io/gpu": "true"
