use deepmerge-ts instead of deepmerge, add special merge logic for cluster.apiServer.admissionControl settings, turn on restricted pod security

--- a/config/cluster.yaml
+++ b/config/cluster.yaml
@@ -56,6 +56,14 @@ name: homelab
 
 baseTalosConfig:
   cluster:
+    apiServer:
+      admissionControl:
+        - name: PodSecurity
+          configuration:
+            defaults:
+              audit: restricted
+              enforce: restricted
+              warn: restricted
     network:
       cni:
         name: none
