--- a/config/cluster.yaml
+++ b/config/cluster.yaml
@@ -64,11 +64,17 @@ baseTalosConfig:
               audit: restricted
               enforce: restricted
               warn: restricted
+    controllerManager:
+      extraArgs:
+        bind-address: 0.0.0.0
     network:
       cni:
         name: none
     proxy:
       disabled: true
+    scheduler:
+      extraArgs:
+        bind-address: 0.0.0.0
   machine:
     features:
       hostDNS:
