update to homelab-helper 4.2.0, add router-gateway-sync deployment

--- a/config/apps.yaml
+++ b/config/apps.yaml
@@ -28,6 +28,7 @@
 - template: prometheus-node-exporter
 - template: prometheus-operator
 - template: pvc-restore
+- template: router-gateway-sync
 - template: storage-class
 - template: vault
 - template: vault-push-secrets
