--- a/config/apps.yaml
+++ b/config/apps.yaml
@@ -28,7 +28,7 @@
 - template: prometheus-node-exporter
 - template: prometheus-operator
 - template: pvc-restore
-- template: router-gateway-sync
+- template: router-policy-sync
 - template: storage-class
 - template: vault
 - template: vault-push-secrets
