add public gateway policy rules, add minecraft template and app, add netpols for minecraft

--- a/config/apps.yaml
+++ b/config/apps.yaml
@@ -17,6 +17,7 @@
 - template: linstor
 - template: loki
 - template: metrics-server
+- template: minecraft
 - template: minio
 - template: minio-operator
 - template: minio-operator-ext
