--- a/config/apps.yaml
+++ b/config/apps.yaml
@@ -31,6 +31,7 @@
 - template: pvc-restore
 - template: router-policy-sync
 - template: storage-class
+- template: tunnel
 - template: vault
 - template: vault-push-secrets
 - template: vault-secrets-operator
